--- a/ui-learn/src/main/res/drawable/list_divider.xml
+++ b/ui-learn/src/main/res/drawable/list_divider.xml
@@ -2,12 +2,12 @@
 <shape
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle" >
-    <corners android:topLeftRadius="1dp"
-        android:topRightRadius="1dp"
-        android:bottomLeftRadius="1dp"
-        android:bottomRightRadius="1dp"
-        android:radius="1dp" />
-    <size android:height="30dp"
-        android:width="6dp" />
-    <solid android:color="@android:color/white" />
+    <corners android:topLeftRadius="2dp"
+        android:topRightRadius="2dp"
+        android:bottomLeftRadius="2dp"
+        android:bottomRightRadius="2dp"
+        android:radius="2dp" />
+    <size android:height="4dp"
+        android:width="4dp" />
+    <solid android:color="@android:color/darker_gray" />
 </shape>
