--- a/ui-learn/src/main/res/values/arrays.xml
+++ b/ui-learn/src/main/res/values/arrays.xml
@@ -3,5 +3,6 @@
     <array name="spinner_items">
         <item>基本图形</item>
         <item>滑动索引选择条</item>
+        <item>下拉回弹</item>
     </array>
 </resources>
