--- a/ui-learn/src/main/res/layout/activity_main.xml
+++ b/ui-learn/src/main/res/layout/activity_main.xml
@@ -14,6 +14,12 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/open_notification_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Notification" />
+
+        <Button
             android:id="@+id/open_recycler_view_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -79,5 +85,6 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="XML parser" />
+
     </LinearLayout>
 </ScrollView>
