--- a/ui-learn/src/main/res/layout/activity_main.xml
+++ b/ui-learn/src/main/res/layout/activity_main.xml
@@ -14,6 +14,12 @@
         android:orientation="vertical">
 
         <Button
+            android:id="@+id/open_retrofit_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Retrofit" />
+
+        <Button
             android:id="@+id/open_notification_btn"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
