--- a/ui-learn/src/main/res/layout/activity_main.xml
+++ b/ui-learn/src/main/res/layout/activity_main.xml
@@ -10,8 +10,19 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:orientation="vertical">
+        <Button
+            android:id="@+id/open_glide_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Glide" />
+
+        <Button
+            android:id="@+id/open_annotation_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Annotation" />
 
         <Button
             android:id="@+id/open_retrofit_btn"
