--- a/ui-learn/src/main/res/layout/card_view_item.xml
+++ b/ui-learn/src/main/res/layout/card_view_item.xml
@@ -4,6 +4,7 @@
     android:id="@+id/card_view_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginTop="3dp"
     android:gravity="center"
     android:orientation="vertical">
 
