--- a/ui-learn/src/main/res/layout/recycler_view_refresh_footer.xml
+++ b/ui-learn/src/main/res/layout/recycler_view_refresh_footer.xml
@@ -3,7 +3,8 @@
     android:id="@+id/footer_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
+    android:padding="16dp"
+    android:gravity="center|top"
     android:orientation="vertical">
 
     <TextView
