--- a/ui-learn/src/main/res/layout/recycler_view_refresh_header.xml
+++ b/ui-learn/src/main/res/layout/recycler_view_refresh_header.xml
@@ -2,15 +2,23 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
-    android:orientation="vertical">
+    android:gravity="bottom|center"
+    android:orientation="horizontal"
+    android:padding="16dp">
+
+    <ImageView
+        android:id="@+id/header_image"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_downward" />
+
     <TextView
         android:id="@+id/header_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Header"/>
-    <ProgressBar
-        android:id="@+id/header_progress"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_marginLeft="16dp"
+        android:layout_gravity="center"
+        android:text="Header" />
+
 </LinearLayout>
